[gd_scene format=3 uid="uid://c7veco5r20d7q"]

[ext_resource type="Script" uid="uid://bd375weh6dl1i" path="res://scripts/settings.gd" id="1_o8tsb"]
[ext_resource type="Texture2D" uid="uid://dibbd758od1b" path="res://assets/art/background/setting(1).jpg" id="1_sjyvh"]
[ext_resource type="Texture2D" uid="uid://b7c35ie6oam2h" path="res://assets/art/menu/2.png" id="2_scrng"]
[ext_resource type="Texture2D" uid="uid://bhcr73uqhtf6y" path="res://assets/art/menu/menu2.png" id="2_u58eq"]
[ext_resource type="FontFile" uid="uid://bssopqtd7xymm" path="res://assets/fonts/Fredoka-Bold.ttf" id="3_7k1fe"]
[ext_resource type="Texture2D" uid="uid://bt6cs2aafggjb" path="res://assets/art/menu/menu.png" id="4_scrng"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u58eq"]
texture = ExtResource("2_scrng")

[sub_resource type="AtlasTexture" id="AtlasTexture_31ui4"]
atlas = ExtResource("4_scrng")
region = Rect2(408, 1624, 136, 152)

[sub_resource type="AtlasTexture" id="AtlasTexture_50131"]
atlas = ExtResource("4_scrng")
region = Rect2(400, 1624, 144, 152)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8tsb"]
atlas = ExtResource("4_scrng")
region = Rect2(16, 1488, 440, 96)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ikx14"]
content_margin_left = 45.0
content_margin_top = 18.0
content_margin_right = 45.0
content_margin_bottom = 65.0
texture = SubResource("AtlasTexture_o8tsb")
texture_margin_left = 70.0
texture_margin_right = 70.0

[sub_resource type="AtlasTexture" id="AtlasTexture_rawaq"]
atlas = ExtResource("4_scrng")
region = Rect2(32, 1392, 416, 88)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8iqn7"]
texture = SubResource("AtlasTexture_rawaq")
texture_margin_left = 70.0
texture_margin_right = 70.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_scrng"]
texture = SubResource("AtlasTexture_rawaq")
texture_margin_left = 70.0
texture_margin_right = 70.0

[sub_resource type="AtlasTexture" id="AtlasTexture_8iqn7"]
atlas = ExtResource("4_scrng")
region = Rect2(472, 1400, 160, 152)

[sub_resource type="AtlasTexture" id="AtlasTexture_scrng"]
atlas = ExtResource("4_scrng")
region = Rect2(48, 1624, 312, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikx14"]
atlas = ExtResource("4_scrng")
region = Rect2(592, 1624, 304, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ueedh"]
atlas = ExtResource("2_u58eq")
region = Rect2(2248, 736, 224, 232)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_31ui4"]
texture = SubResource("AtlasTexture_ueedh")

[node name="Setting" type="Control" unique_id=1694985216]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o8tsb")

[node name="Background" type="TextureRect" parent="." unique_id=1209050796]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -78.0
offset_top = -177.0
offset_right = 78.0
offset_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_sjyvh")

[node name="Menu" type="Panel" parent="." unique_id=984610640]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -495.0
offset_top = -882.0
offset_right = 495.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_u58eq")

[node name="Title" type="Label" parent="Menu" unique_id=1650303139]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -142.0
offset_top = 69.0
offset_right = 142.0
offset_bottom = 155.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0.025813123, 0.33181137, 0.45101666, 1)
theme_override_colors/font_outline_color = Color(0.02745098, 0.33333334, 0.4509804, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 20
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("3_7k1fe")
theme_override_font_sizes/font_size = 90
text = "SETTING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBox" type="VBoxContainer" parent="Menu" unique_id=4441066]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -354.0
offset_top = -268.0
offset_right = 531.7141
offset_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.84, 0.84)
theme_override_constants/separation = 33

[node name="VBoxVolume" type="VBoxContainer" parent="Menu/VBox" unique_id=1855065089]
layout_mode = 2

[node name="VolumeLabel" type="Label" parent="Menu/VBox/VBoxVolume" unique_id=956866010]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.025813123, 0.33181137, 0.45101666, 1)
theme_override_colors/font_outline_color = Color(0.02745098, 0.33333334, 0.4509804, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 20
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("3_7k1fe")
theme_override_font_sizes/font_size = 50
text = "Sound Volume"

[node name="HBoxVolume" type="HBoxContainer" parent="Menu/VBox/VBoxVolume" unique_id=361658796]
layout_mode = 2

[node name="VolumeSlider" type="HSlider" parent="Menu/VBox/VBoxVolume/HBoxVolume" unique_id=1104204933]
layout_mode = 2
size_flags_horizontal = 3
theme_override_icons/grabber = SubResource("AtlasTexture_31ui4")
theme_override_icons/grabber_highlight = SubResource("AtlasTexture_50131")
theme_override_styles/slider = SubResource("StyleBoxTexture_ikx14")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_8iqn7")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_scrng")
value = 100.0

[node name="TextureRect" type="TextureRect" parent="Menu/VBox/VBoxVolume/HBoxVolume" unique_id=843771472]
layout_mode = 2
texture = SubResource("AtlasTexture_8iqn7")

[node name="HBoxMusic" type="HBoxContainer" parent="Menu/VBox" unique_id=1446858012]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="Menu/VBox/HBoxMusic" unique_id=1564912229]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.025813123, 0.33181137, 0.45101666, 1)
theme_override_colors/font_outline_color = Color(0.02745098, 0.33333334, 0.4509804, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 20
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("3_7k1fe")
theme_override_font_sizes/font_size = 50
text = "Music"

[node name="Music" type="CheckButton" parent="Menu/VBox/HBoxMusic" unique_id=57108382]
layout_mode = 2
size_flags_horizontal = 3
theme_override_icons/checked = SubResource("AtlasTexture_scrng")
theme_override_icons/unchecked = SubResource("AtlasTexture_ikx14")

[node name="HBoxVibration" type="HBoxContainer" parent="Menu/VBox" unique_id=860564853]
layout_mode = 2

[node name="VibrationLabel" type="Label" parent="Menu/VBox/HBoxVibration" unique_id=444891835]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.025813123, 0.33181137, 0.45101666, 1)
theme_override_colors/font_outline_color = Color(0.02745098, 0.33333334, 0.4509804, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 20
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("3_7k1fe")
theme_override_font_sizes/font_size = 50
text = "Vibration"

[node name="Vibration" type="CheckButton" parent="Menu/VBox/HBoxVibration" unique_id=327134538]
layout_mode = 2
size_flags_horizontal = 3
theme_override_icons/checked = SubResource("AtlasTexture_scrng")
theme_override_icons/unchecked = SubResource("AtlasTexture_ikx14")

[node name="ExitButton" type="Button" parent="Menu" unique_id=292754762]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -143.0
offset_top = -12.000006
offset_right = -135.0
offset_bottom = -4.0000057
grow_horizontal = 0
scale = Vector2(20, 20)
theme_override_styles/normal = SubResource("StyleBoxTexture_31ui4")
theme_override_styles/pressed = SubResource("StyleBoxTexture_31ui4")
theme_override_styles/hover = SubResource("StyleBoxTexture_31ui4")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_31ui4")
theme_override_styles/focus = SubResource("StyleBoxTexture_31ui4")

[connection signal="value_changed" from="Menu/VBox/VBoxVolume/HBoxVolume/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="toggled" from="Menu/VBox/HBoxMusic/Music" to="." method="_on_music_toggled"]
[connection signal="toggled" from="Menu/VBox/HBoxVibration/Vibration" to="." method="_on_vibration_toggled"]
